--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -50,7 +50,7 @@
 		<div class="col-lg-3 col-sm-6">
 			<div class="form-group">
 				<%= f.label :goaltype, 'Type' %>
-				<%= select(:goal, 'goaltype', ['Total', 'Contract', 'Hourly', 'Retainer'], {}, { :class => 'form-control' }) %>
+				<%= select(:goal, 'goaltype', ['Total', 'Contract', 'Hourly'], {}, { :class => 'form-control' }) %>
 			</div>
 		</div>
 	</div>
