--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -10,8 +10,7 @@
 		<hr class="halfbottom">
 		<span class="lead">
 			Contract: <span class="pull-right currency text-info"><%= number_to_currency(Invoice.paidByMonth(today.year, today.month).contract.sum('cost'), { :negative_format => '(%n)' }) %></span><br>
-			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.paidByMonth(today.year, today.month).hourly.sum('cost'), { :negative_format => '(%n)' }) %></span><br>
-			Retainer: <span class="pull-right currency text-muted"><%= number_to_currency(Invoice.paidByMonth(today.year, today.month).retainer.sum('cost'), { :negative_format => '(%n)' }) %></span>
+			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.paidByMonth(today.year, today.month).hourly.sum('cost'), { :negative_format => '(%n)' }) %></span>
 		</span>
 	</div>
 	<div class="col-lg-4 col-lg-offset-1 col-md-8 col-md-offset-2">
@@ -31,8 +30,7 @@
 		<hr class="halfbottom">
 		<span class="lead">
 			Contract: <span class="pull-right currency text-info"><%= number_to_currency(Invoice.paidByYear(today.year).contract.sum('cost'), { :negative_format => '(%n)' }) %></span><br>
-			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.paidByYear(today.year).hourly.sum('cost'), { :negative_format => '(%n)' }) %></span><br>
-			Retainer: <span class="pull-right currency text-muted"><%= number_to_currency(Invoice.paidByYear(today.year).retainer.sum('cost'), { :negative_format => '(%n)' }) %></span>
+			Hourly: <span class="pull-right currency text-warning"><%= number_to_currency(Invoice.paidByYear(today.year).hourly.sum('cost'), { :negative_format => '(%n)' }) %></span>
 		</span>
 	</div>
 </div>
