Moved images to S3

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -101,11 +101,11 @@
 			<h3>We also accept electronic payments at the following providers:</h3>
 			<div class="row">
 				<div class="col-sm-4 col-sm-offset-1 payment-option payment-option-chase">
-					<%= image_tag('chase.svg') %>
+					<img src="https://s3.amazonaws.com/SeferBiz/internal/chase.svg">
 					Make a Chase QuickPay payment to 'info@seferdesign.com'
 				</div>
 				<div class="col-sm-4 col-sm-offset-2 payment-option payment-option-paypal">
-					<%= image_tag('paypal.svg') %>
+					<img src="https://s3.amazonaws.com/SeferBiz/internal/paypal.svg">
 					Make a PayPal payment to 'info@seferdesign.com' and mark as a 'friends and family' transaction to avoid fees
 				</div>
 			</div>
