--- a/app/views/invoice_mailer/invoice_email.html.erb
+++ b/app/views/invoice_mailer/invoice_email.html.erb
@@ -30,7 +30,7 @@
             <table>
               <tr>
                 <td align="center">
-                  <p><a href="<%= invoice_url(@invoice) %>?access_token=<%= @invoice.access_token %>"><img style="max-width: 200px;" src="<%= root_url[0...-1] %><%= payment_button_png_url %>" alt="View Payment Instructions"></a></p>
+                  <p><a href="<%= invoice_url(@invoice) %>?access_token=<%= @invoice.access_token %>"><img style="max-width: 200px;" src="https://s3.amazonaws.com/SeferBiz/internal/payment-button.png" alt="View Payment Instructions"></a></p>
                 </td>
               </tr>
             </table>
