--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -205,7 +205,11 @@ footer {
     max-width: 200px;
 		max-height: 35px;
   }
-  
+
+	.stripe-button-el {
+		margin-top: 2rem;
+	}
+
 }
 
 @media all and (min-width: 768px) {
