--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -91,18 +91,6 @@
 		</table>
 		<% end %>
     <% if !user_signed_in? and !@invoice.paid %>
-		<form action="/your-server-side-code" method="POST">
-      <div>For an additional fee of <%= number_to_currency(@invoice.stripeChargeDifference) %> (Stripe fees), you can charge a CC, for a total of <%= number_to_currency(@invoice.stripeChargeCost) %></div>
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="<%= Figaro.env.stripe %>"
-    data-amount="<%= @invoice.stripeChargeCost * 100 %>"
-    data-name="Sefer Design Company LLC"
-    data-description="<%= @invoice.display_id %>"
-    data-image="https://s3.amazonaws.com/SeferBiz/internal/sdc-square.png"
-    data-locale="auto">
-  </script>
-</form>
 		<div class="payment-options">
 			<div class="row">
 				<div class="col-sm-8 col-sm-offset-2 payment-option payment-option-check">
@@ -110,7 +98,8 @@
 					<p><%= company_pay_to %><br><%= company_street %><br><%= company_city %>, <%= company_state_abbrv %> <%= company_zipcode %></p>
 				</div>
 			</div>
-			<h3>We also accept electronic payments at the following providers:</h3>
+      <hr>
+			<h3>We accept electronic payments at the following providers:</h3>
 			<div class="row">
 				<div class="col-sm-4 col-sm-offset-1 payment-option payment-option-chase">
 					<img src="https://s3.amazonaws.com/SeferBiz/internal/chase.svg">
@@ -121,6 +110,25 @@
 					Make a PayPal payment to 'info@seferdesign.com' and mark as a 'friends and family' transaction to avoid fees
 				</div>
 			</div>
+      <hr>
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2 payment-option payment-option-stripe">
+					<h3>We also accept credit cards via the Stripe payment service:</h3>
+					<%= form_tag "#{stripe_invoice_path(@invoice)}?access_token=#{@invoice.access_token}" do %>
+		  	    <div>Stripe adds a fee of <strong><%= number_to_currency(@invoice.stripeChargeDifference) %></strong> for this transaction, which increases your payment total to <strong><%= number_to_currency(@invoice.stripeChargeCost) %></strong>.</div>
+		  			<script
+		  			  src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+		  			  data-key="<%= Figaro.env.stripe_api_publishable_key %>"
+		  			  data-amount="<%= @invoice.stripeChargeCost * 100 %>"
+		  			  data-name="Sefer Design Company LLC"
+		  			  data-description="<%= @invoice.display_id %>"
+		  			  data-image="https://s3.amazonaws.com/SeferBiz/internal/sdc-square.png"
+		  			  data-locale="auto">
+		  			</script>
+		      <% end %>
+				</div>
+			</div>
+
     </div>
     <% end %>
 		<% if user_signed_in? %>
