--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,23 +1,26 @@
 <% if user_signed_in? %>
 <% provide(:title, "Invoice ##{@invoice.id} | ") %>
 <% else %>
-<% provide(:title, "Invoice | ") %>
+<% provide(:title, "Invoice #{@invoice.display_id} | ") %>
 <% end %>
 <section id="invoice-show">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-sm-<% if user_signed_in? %>12<% else %>8 col-sm-offset-2<% end %>">
 				<% if @invoice.client.logo.present? %>
 				<%= image_tag(@invoice.client.logo.url(), class: 'client-logo pull-right hidden-xs') %>
 				<% end %>
 				<% if user_signed_in? %>
 				<h1>Invoice #<%= @invoice.id %></h1>
 				<p class="doicons">
-					<%= link_to invoice_path(:format=>'pdf'), title: 'PDF' do %><i class="fa fa-fw fa-2x fa-file text-success"></i><% end %>
+					<%= link_to invoice_path(:format => 'pdf'), title: 'PDF' do %><i class="fa fa-fw fa-2x fa-file text-success"></i><% end %>
 					<%= link_to edit_invoice_path(@invoice), title: 'Edit' do %><i class="fa fa-fw fa-2x fa-pencil-square-o text-warning"></i><% end %>
 					<%= link_to invoice_path(@invoice), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Invoice ##{@invoice.id}?" } do %><i class="fa fa-fw fa-2x fa-trash-o text-danger"></i><% end %>
 					<%= link_to email_invoice_path(@invoice), title: 'Send' do %><i class="fa fa-fw fa-2x fa-envelope text-success"></i><% end %>
 				</p>
+				<% end %>
+				<% if @invoice.paid == true and !user_signed_in? %>
+				<p><%= link_to invoice_path(:format => 'pdf', :access_token => @invoice.access_token), { :target => '_blank' } do %>Download Invoice marked 'PAID'<% end %></p>
 				<% end %>
 				<p>
 					<strong>Client:</strong>
@@ -35,11 +38,9 @@
 				<% end %>
 				<% end %>
 				<p>
-					<strong>ID<% if user_signed_in? %> Display<% end %>:</strong>
+					<strong>Invoice ID<% if user_signed_in? %> Display<% end %>:</strong>
 					<%= @invoice.display_id %>
 				</p>
-				<p><strong>Description:</strong></p>
-				<p><%= @invoice.description %></p>
 				<p>
 					<strong>Date:</strong>
 					<%= @invoice.date.to_formatted_s(:long) %>
@@ -52,13 +53,14 @@
 					<strong>Cost:</strong>
 					<%= number_to_currency(@invoice.cost, { :negative_format => '(%n)' }) %>
 				</p>
+				<% if @invoice.paid == false %>
 				<p>
 					<strong>Paid?:</strong>
 					<% if @invoice.paid == true %><i class="fa fa-check green"></i><% else %><span class="spread red">Not Paid</span><% end %>
 				</p>
-				<% if @invoice.paid == true %>
+				<% else %>
 				<p>
-					<strong>Paid Date:</strong>
+					<span class="spread green">Paid</span> on
 					<%= @invoice.paiddate.to_formatted_s(:long) %>
 				</p>
 				<% if !@invoice.paymenttype.blank? %>
@@ -68,81 +70,83 @@
 				</p>
 				<% end %>
 				<% end %>
+				<p><strong>Description:</strong></p>
+				<p><%= @invoice.description %></p>
+				<% if !@invoice.lines.blank? %>
+				<table class="table table-condensed">
+					<thead>
+						<tr>
+		          <% if user_signed_in? %>
+							<th>&nbsp;</th>
+		          <% end %>
+							<th>Description</th>
+							<th class="text-center">Hours</th>
+							<th class="text-center">Rate ($) per Hour</th>
+							<th class="text-center">Cost</th>
+						</tr>
+					</thead>
+					<tbody>
+						<%= render @invoice.lines %>
+						<tr>
+		          <% if user_signed_in? %>
+							<td>&nbsp;</td>
+		          <% end %>
+							<td class="text-right" colspan="3"><strong>Total</strong>&nbsp;&nbsp;</td>
+							<td><strong><div class="pull-right"><%= number_to_currency(@invoice.lines.sum('total'), { :unit => '', :negative_format => '(%n)' }) %></div>$</strong></td>
+						</tr>
+					</tbody>
+				</table>
+				<% end %>
+		    <% if !user_signed_in? and !@invoice.paid and @invoice.access_token.present? %>
+				<div class="payment-options">
+					<div class="row">
+						<div class="col-sm-12payment-option payment-option-check">
+							<h3>This payment can be made out to '<%= company_pay_to %>' and mailed to:</h3>
+							<p><%= company_pay_to %><br><%= company_street %><br><%= company_city %>, <%= company_state_abbrv %> <%= company_zipcode %></p>
+						</div>
+					</div>
+		      <hr>
+					<h3>We accept electronic payments at the following providers:</h3>
+					<div class="row">
+						<div class="col-sm-6 payment-option payment-option-chase">
+							<img src="https://s3.amazonaws.com/SeferBiz/internal/chase.svg">
+							Make a Chase QuickPay payment to 'info@seferdesign.com'
+						</div>
+						<div class="col-sm-6 payment-option payment-option-paypal">
+							<img src="https://s3.amazonaws.com/SeferBiz/internal/paypal.svg">
+							Make a PayPal payment to 'info@seferdesign.com' and mark as a 'friends and family' transaction to avoid fees
+						</div>
+					</div>
+		      <hr>
+					<div class="row">
+						<div class="col-sm-12 payment-option payment-option-stripe">
+							<h3>We also accept credit cards via the Stripe payment service:</h3>
+							<%= form_tag "#{stripe_invoice_path(@invoice)}?access_token=#{@invoice.access_token}" do %>
+				  	    <div>Stripe <a href="https://stripe.com/us/pricing" target="_blank">adds a fee</a> of <strong><%= number_to_currency(@invoice.stripeChargeDifference) %></strong> for this transaction, which increases your payment total to <strong><%= number_to_currency(@invoice.stripeChargeCost) %></strong>.</div>
+				  			<script
+				  			  src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+				  			  data-key="<%= Figaro.env.stripe_api_publishable_key %>"
+				  			  data-amount="<%= @invoice.stripeChargeCost * 100 %>"
+				  			  data-name="Sefer Design Company LLC"
+				  			  data-description="<%= @invoice.display_id %>"
+				  			  data-image="https://s3.amazonaws.com/SeferBiz/internal/sdc-square.png"
+				  			  data-locale="auto">
+				  			</script>
+				      <% end %>
+						</div>
+					</div>
+		    </div>
+		    <% end %>
+				<% if user_signed_in? %>
+				<h2>Add a line:</h2>
+				<%= render 'lines/form' %>
+				<div class="row hidden-print">
+					<div class="col-sm-12">
+						<p><%= link_to 'Back', invoices_path %></p>
+					</div>
+				</div>
+				<% end %>
 			</div>
 		</div>
-		<% if !@invoice.lines.blank? %>
-		<table class="table table-condensed">
-			<thead>
-				<tr>
-          <% if user_signed_in? %>
-					<th>&nbsp;</th>
-          <% end %>
-					<th>Description</th>
-					<th class="text-center">Hours</th>
-					<th class="text-center">Rate ($) per Hour</th>
-					<th class="text-center">Cost</th>
-				</tr>
-			</thead>
-			<tbody>
-				<%= render @invoice.lines %>
-				<tr>
-          <% if user_signed_in? %>
-					<td>&nbsp;</td>
-          <% end %>
-					<td class="text-right" colspan="3"><strong>Total</strong>&nbsp;&nbsp;</td>
-					<td><strong><div class="pull-right"><%= number_to_currency(@invoice.lines.sum('total'), { :unit => '', :negative_format => '(%n)' }) %></div>$</strong></td>
-				</tr>
-			</tbody>
-		</table>
-		<% end %>
-    <% if !user_signed_in? and !@invoice.paid and @invoice.access_token.present? %>
-		<div class="payment-options">
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2 payment-option payment-option-check">
-					<h3>This payment can be made out to '<%= company_pay_to %>' and mailed to:</h3>
-					<p><%= company_pay_to %><br><%= company_street %><br><%= company_city %>, <%= company_state_abbrv %> <%= company_zipcode %></p>
-				</div>
-			</div>
-      <hr>
-			<h3>We accept electronic payments at the following providers:</h3>
-			<div class="row">
-				<div class="col-sm-4 col-sm-offset-1 payment-option payment-option-chase">
-					<img src="https://s3.amazonaws.com/SeferBiz/internal/chase.svg">
-					Make a Chase QuickPay payment to 'info@seferdesign.com'
-				</div>
-				<div class="col-sm-4 col-sm-offset-2 payment-option payment-option-paypal">
-					<img src="https://s3.amazonaws.com/SeferBiz/internal/paypal.svg">
-					Make a PayPal payment to 'info@seferdesign.com' and mark as a 'friends and family' transaction to avoid fees
-				</div>
-			</div>
-      <hr>
-			<div class="row">
-				<div class="col-sm-8 col-sm-offset-2 payment-option payment-option-stripe">
-					<h3>We also accept credit cards via the Stripe payment service:</h3>
-					<%= form_tag "#{stripe_invoice_path(@invoice)}?access_token=#{@invoice.access_token}" do %>
-		  	    <div>Stripe <a href="https://stripe.com/us/pricing" target="_blank">adds a fee</a> of <strong><%= number_to_currency(@invoice.stripeChargeDifference) %></strong> for this transaction, which increases your payment total to <strong><%= number_to_currency(@invoice.stripeChargeCost) %></strong>.</div>
-		  			<script
-		  			  src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-		  			  data-key="<%= Figaro.env.stripe_api_publishable_key %>"
-		  			  data-amount="<%= @invoice.stripeChargeCost * 100 %>"
-		  			  data-name="Sefer Design Company LLC"
-		  			  data-description="<%= @invoice.display_id %>"
-		  			  data-image="https://s3.amazonaws.com/SeferBiz/internal/sdc-square.png"
-		  			  data-locale="auto">
-		  			</script>
-		      <% end %>
-				</div>
-			</div>
-    </div>
-    <% end %>
-		<% if user_signed_in? %>
-		<h2>Add a line:</h2>
-		<%= render 'lines/form' %>
-		<div class="row hidden-print">
-			<div class="col-sm-12">
-				<p><%= link_to 'Back', invoices_path %></p>
-			</div>
-		</div>
-		<% end %>
 	</div>
 </section>
