--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -120,7 +120,7 @@
 		      <hr>
 					<div class="row">
 						<div class="col-sm-12 payment-option payment-option-stripe">
-							<h3>We also accept credit cards via the Stripe payment service:</h3>
+							<h3>We also accept credit and debit cards via the Stripe payment service:</h3>
 							<%= form_tag "#{stripe_invoice_path(@invoice)}?access_token=#{@invoice.access_token}" do %>
 				  	    <div>Stripe <a href="https://stripe.com/us/pricing" target="_blank">adds a fee</a> of <strong><%= number_to_currency(@invoice.stripeChargeDifference) %></strong> for this transaction, which increases your payment total to <strong><%= number_to_currency(@invoice.stripeChargeCost) %></strong>.</div>
 				  			<script
