Year income csv fix

--- a/app/views/years/show.csv.erb
+++ b/app/views/years/show.csv.erb
@@ -6,7 +6,7 @@
   'Description'
 ] %>
 <%= CSV.generate_line headers %>
-<% @year.invoices.paid.sort { |a,b| a.paiddate <=> b.paiddate }.each do |invoice| %><%= CSV.generate_line([
+<% Invoice.paidByYear(@year.year).sort { |a,b| a.paiddate <=> b.paiddate }.each do |invoice| %><%= CSV.generate_line([
     invoice.paiddate,
     invoice.client.name.sub(',', ''),
     invoice.cost,
