Client view changes

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -115,11 +115,11 @@
 				<table class="table table-condensed">
 					<thead>
 						<tr>
-							<th>Date</th>
+							<th>Date Sent</th>
 							<th>ID</th>
 							<th class="text-center hidden-xs">Type</th>
 							<th class="text-right">Cost</th>
-							<th class="text-center">Paid?</th>
+							<th class="text-center">Date Paid</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -129,7 +129,7 @@
 							<td><%= invoice.display_id %></td>
 							<td class="text-center hidden-xs"><%= invoice.worktype %></td>
 							<td class="text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
-							<td class="text-center"><% if invoice.paid == true %><i class="fa fa-check green"></i><% else %><span class="spread red">Not Paid</span><% end %></td>
+							<td class="text-center"><% if invoice.paid == true %><span class="green"><%= invoice.paiddate %></span><% else %><span class="spread red">Not Paid</span><% end %></td>
 						</tr>
 						<% end %>
 						<tr>
