--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -101,12 +101,13 @@
 				<div class="payment-options">
 					<div class="row">
 						<div class="col-sm-12payment-option payment-option-check">
-							<h3>This payment can be made out to '<%= company_pay_to %>' and mailed to:</h3>
+							<h3>Pay via paper check:</h3>
+							<p>Please make the check out to '<strong><%= company_pay_to %></strong>' and mail to:</p>
 							<p><%= company_pay_to %><br><%= company_street %><br><%= company_city %>, <%= company_state_abbrv %> <%= company_zipcode %></p>
 						</div>
 					</div>
 		      <hr>
-					<h3>We accept electronic payments at the following providers:</h3>
+					<h3>Pay electronically:</h3>
 					<div class="row">
 						<div class="col-sm-6 payment-option payment-option-chase">
 							<img src="https://s3.amazonaws.com/SeferBiz/internal/chase.svg">
@@ -120,7 +121,7 @@
 		      <hr>
 					<div class="row">
 						<div class="col-sm-12 payment-option payment-option-stripe">
-							<h3>We also accept credit and debit cards via the Stripe payment service:</h3>
+							<h3>Pay with credit or debit card via the Stripe payment service:</h3>
 							<%= form_tag "#{stripe_invoice_path(@invoice)}?access_token=#{@invoice.access_token}" do %>
 				  	    <div>Stripe <a href="https://stripe.com/us/pricing" target="_blank">adds a fee</a> of <strong><%= number_to_currency(@invoice.stripeChargeDifference) %></strong> for this transaction, which increases your payment total to <strong><%= number_to_currency(@invoice.stripeChargeCost) %></strong>.</div>
 				  			<script
