--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -17,6 +17,7 @@
 					<%= link_to edit_invoice_path(@invoice), title: 'Edit' do %><i class="fa fa-fw fa-2x fa-pencil-square-o text-warning"></i><% end %>
 					<%= link_to invoice_path(@invoice), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Invoice ##{@invoice.id}?" } do %><i class="fa fa-fw fa-2x fa-trash-o text-danger"></i><% end %>
 					<%= link_to email_invoice_path(@invoice), title: 'Send' do %><i class="fa fa-fw fa-2x fa-envelope text-success"></i><% end %>
+					<% if !@invoice.paid? %><%= link_to mark_paid_invoice_path(@invoice), id: 'paid-today-btn', title: 'Paid Today?', class: 'btn btn-sm btn-warning', remote: true do %>Paid Today?<% end %><% end %>
 				</p>
 				<% end %>
 				<% if @invoice.paid == true and !user_signed_in? %>
