--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,30 +38,30 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to goals_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><i class="fa fa-tasks left"></i>Goals<% end %>
+								<%= link_to goals_path, { :class => 'btn btn-block btn-lg btn-primary' } do %><i class="fa fa-tasks left"></i>Goals<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_goal_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_goal_path, { :class => 'btn btn-block btn-lg btn-primary' } do %><i class="fa fa-fw fa-plus"></i><% end %>
               </div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-users left"></i>Vendors<% end %>
+								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><i class="fa fa-users left"></i>Vendors<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_vendor_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_vendor_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><i class="fa fa-fw fa-plus"></i><% end %>
               </div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to expenses_path, { :class => 'btn btn-block btn-lg btn-primary' } do %><i class="fa fa-credit-card left"></i>Expenses<% end %>
+								<%= link_to expenses_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-credit-card left"></i>Expenses<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_expense_path, { :class => 'btn btn-block btn-lg btn-primary' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_expense_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-fw fa-plus"></i><% end %>
               </div>
 						</div>
 					</div>
