--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -5,7 +5,7 @@ $green: #5cb85c;
 $red: #d9534f;
 $purple: #8a22ff;
 
-$brand-danger-alt: #593837;
+$brand-danger-alt: #9c5553;
 
 $width-lg: 1200px;
 $width-md: 992px;
