--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -1,5 +1,6 @@
 $black: #000000;
 $white: #ffffff;
+$white-off: #f6f6f6;
 $grey: #333333;
 $green: #5cb85c;
 $red: #d9534f;
@@ -11,4 +12,5 @@ $width-lg: 1200px;
 $width-md: 992px;
 $width-sm: 768px;
 
-$font-headers: 'brandon-grotesque', sans-serif;
+$table-bg-accent: $white-off;
+$table-bg-hover: darken($white-off, 10%);
