--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -16,7 +16,7 @@
 				<% else %>
 				<div class="row">
 					<div class="col-sm-12">
-						<table class="table table-condensed">
+						<table class="table table-hover table-striped table-condensed">
 							<thead>
 								<tr>
 									<th>Client</th>
