--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -47,7 +47,7 @@
 				<% if @goal.invoicesPaidInTimeScope.blank? %>
 				<p class="lead">No paid invoices.</p>
 				<% else %>
-				<table class="table table-condensed">
+				<table class="table table-hover table-striped table-condensed">
 					<thead>
 						<tr>
 							<th>Client</th>
