--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -12,7 +12,7 @@
 						<% if @notableInvoices.blank? %>
 						<p class="lead">No invoices.</p>
 						<% else %>
-						<table class="table table-condensed">
+						<table class="table table-hover table-striped table-condensed">
 							<thead>
 								<tr>
 									<th>Client</th>
