--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -74,7 +74,7 @@
 				<p><strong>Description:</strong></p>
 				<p><%= @invoice.description %></p>
 				<% if !@invoice.lines.blank? %>
-				<table class="table table-condensed">
+				<table class="table table-hover table-striped table-condensed">
 					<thead>
 						<tr>
 		          <% if user_signed_in? %>
