--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -58,7 +58,7 @@
 				<p class="indent">Thank you,<br><%= company_operator_name %><br><%= company_full_name %><br><%= company_email %><br><%= company_phone %></p>
 				<hr>
 				<% if @invoice.lines.present? %>
-				<table class="table table-condensed">
+				<table class="table table-hover table-striped table-condensed">
 		      <thead>
 		        <tr>
 		          <th>Description</th>
