--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<h3 class="text-center red"><i class="fa fa-refresh left"></i>In-Progress</h3>
-						<table class="table table-condensed">
+						<table class="table table-hover table-striped table-condensed">
 							<thead>
 								<tr>
 									<th>Client</th>
@@ -38,7 +38,7 @@
 					</div>
 					<div class="col-sm-12">
 						<h3 class="text-center green"><i class="fa fa-check left"></i>Completed</h3>
-						<table class="table table-condensed">
+						<table class="table table-hover table-striped table-condensed">
 							<thead>
 								<tr>
 									<th>Client</th>
