--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -42,7 +42,7 @@
 				<% if @project.invoices.blank? %>
 				<p class="lead">No invoices.</p>
 				<% else %>
-				<table class="table table-condensed">
+				<table class="table table-hover table-striped table-condensed">
 					<thead>
 						<tr>
 							<th>Date</th>
