--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -36,7 +36,7 @@
 						<% if @year.invoices.unpaid.blank? %>
 						<p class="lead">No unpaid invoices issued in <%= @year.year %>.</p>
 						<% else %>
-						<table class="table table-condensed">
+						<table class="table table-hover table-striped table-condensed">
 							<thead>
 								<tr>
 									<th>Client</th>
@@ -63,7 +63,7 @@
 						<p class="lead">No invoices were paid in <%= @year.year %>.</p>
 						<% else %>
 						<h3>Paid Invoices By Client</h3>
-						<table class="table table-condensed">
+						<table class="table table-hover table-striped table-condensed">
 							<thead>
 								<tr>
 									<th>Client</th>
@@ -82,7 +82,7 @@
 							</tbody>
 						</table>
 						<h3>All Paid Invoices</h3>
-						<table class="table table-condensed">
+						<table class="table table-hover table-striped table-condensed">
 							<thead>
 								<tr>
 									<th>Client</th>
@@ -118,7 +118,7 @@
 				<% else %>
 				<div class="chart-wrap"><%= pie_chart chart_year_by_expense_category_path(@year.id), legend: true, donut: true %></div>
 				<h3>By Vendor (to-date)</h3>
-				<table class="table table-condensed">
+				<table class="table table-hover table-striped table-condensed">
 					<thead>
 						<tr>
 							<th>Vendor</th>
@@ -144,7 +144,7 @@
 				<% if @year.expenses.blank? %>
 				<p class="lead">No to-date expenses in <%= @year.year %>.</p>
 				<% else %>
-				<table class="table table-condensed">
+				<table class="table table-hover table-striped table-condensed">
 					<thead>
 						<tr>
 							<th>Date</th>
@@ -169,7 +169,7 @@
 				<% if @year.expensesFuture.blank? %>
 				<p class="lead">No future expenses in <%= @year.year %>.</p>
 				<% else %>
-				<table class="table table-condensed">
+				<table class="table table-hover table-striped table-condensed">
 					<thead>
 						<tr>
 							<th>Date</th>
